marked 1.1.0 6 Mar 2013
------------
NEW FEATURES

* improved and added to ADMB options for mixed effect modelling which resulted in the modification of a number of calling arguments to crm. 

CHANGES

* modified print.marked.version so it would not conflict with devtools load
* modified code in cjs.f and ADMB TPL files to more closely match MARK in handling small values of Prob(ch) to avoid log(0) 

marked 1.0.9 24 Jan 2013
------------

CHANGES

* modified iteration counter so it was stored in an environment rather than in global workspace to meet CRAN policy


marked 1.0.8 23 Jan 2013
------------

NEW FEATURES

* added multi-state model with fixed effects using admb. This is done with new function mscjs and multistate.tpl. 
It required changes to create.dm,create.dmdf, crm, process.ch and process.data. The code is functional but currently only 
returns admb object that will not work with other generic functions, so crm will not allow it currently.


marked 1.0.7 14 Dec 2012)
------------

NEW FEATURES

* added use of admb and random effects for CJS. Controlled through arguments use.admb=TRUE and re=TRUE respectively. Doesn't currently work with predict.

BUG FIXES

* fixed problem in create.dmdf which was removing id field if fields (static) specified

* made change to cjs.f which was incorrectly fixed for loss on capture

* made changes to bayesCR.cpp to remove compilation warnings


marked 1.0.6 (5 Oct 2012)
------------
CHANGES

* removed autoscale feature which complicated code and was not very effective

* Removed simulation code and put in a separate package - simcr.

* restructured the model object that is returned from crm

NEW FEATURES

* Function load.model will return externally stored model. Most useful with crm.wrapper and external=TRUE 

* Generic function predict will provide estimates of real parameters and optionally std errors, conf intervals and vcv matrix for the existing or newdata. Does not handle fixed parameters at present.
