@@ -1,6 +1,6 @@
 Package: marked
 Version: 1.1.0
-Date: 2013-03-06
+Date: 2013-03-27
 Title: R Code for mark-recapture analysis
 Author: Jeff Laake <jeff.laake@noaa.gov>, Devin Johnson
     <devin.johnson@noaa.gov>, Paul Conn <paul.conn@noaa.gov>
